# GDP-2030

./: .gitignore  README.md  index.html  main.py  pyproject.toml  python.py  readmd.md  requirements.txt
models/: gdp_forecast_scaler.pkl
