[tool.poetry]
name = "gdp-2030"
version = "0.1.0"
description = "GDP Prediction Project for 2030"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0"
Flask = "^2.1.3"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
scikit-learn = "^1.0.2"
# Using PyTorch for machine learning
torch = "^2.0.0"
joblib = "^1.2.0"
numpy = ">=1.23.5"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
